fix: break word in entry title when title is too long.

--- a/myreader-frontend/src/app/js/components/EntryList/Entry/EntryTitle/EntryTitle.css
+++ b/myreader-frontend/src/app/js/components/EntryList/Entry/EntryTitle/EntryTitle.css
@@ -7,6 +7,7 @@
     margin: 0 0 6px;
     text-decoration: none;
     -webkit-tap-highlight-color: transparent;
+    word-break: break-word;
 }
 
 .my-entry-title__title:active {
